# Nala

./: .gitattributes  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
landing/: README.md  next.config.ts  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/docs/: layout.tsx  page.tsx
landing/components/: app-mockup.tsx  github-icon.tsx  method-badge.tsx  reveal.tsx
landing/components/docs/: callout.tsx  code-block.tsx  kbd.tsx  steps.tsx  (+4 more)
landing/lib/: content.ts
scripts/: gen-icons.mjs  mock-api.py
scripts/sample-api/: openapi.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_services.sql  0003_variables.sql  0004_auth.sql  0005_auth_login.sql  0006_history.sql  0007_saved_requests.sql  0008_sequences.sql
src-tauri/src/: api.rs  auth.rs  commands.rs  crypto.rs  db.rs  discover.rs  error.rs  history.rs  http.rs  keychain.rs  lib.rs  login.rs  main.rs  models.rs  store.rs
src-tauri/src/openapi/: codegen.rs  diff.rs  fetch.rs  mod.rs  normalize.rs
src/components/: Logo.tsx  MethodBadge.tsx  icons.tsx
src/lib/: interpolate.ts  jsonpath.ts  request.ts  schema.ts  sequence.ts  tauri.ts
src/store/: authStore.ts  confirmStore.ts  historyStore.ts  requestStore.ts  savedRequestsStore.ts  sequencesStore.ts  servicesStore.ts  uiStore.ts  variablesStore.ts
src/styles/: global.css  tokens.css
src/types/: diff.ts  discover.ts  http.ts  openapi.ts  saved.ts  sequence.ts
(+73 files in other folders)
