[package]
name = "nala"
version = "1.0.0"
description = "Cliente de escritorio para APIs FastAPI / OpenAPI"
authors = ["Roberto Rodríguez Carbonell"]
edition = "2021"
rust-version = "1.77"

[lib]
# El nombre del crate de librería se importa desde main.rs.
name = "nala_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["windows-native"] }
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
thiserror = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
